CHANGES IN VERSION 1.44.0

    o New method for 'greaterAbs' in results() which has more
      power than the original 2014-2023 method. The old method
      is available as 'greaterAbs2014'.
      Suggested by Nikos Ignatiadis

    o Fix from I-Hsuan Lin for the glmGamPoi dispersion estimation
      where the wrong indexing of the fitted mean matrix was used,
      which caused a slowdown.

CHANGES IN VERSION 1.42.0
-------------------------

    o collapseReplicates() now noisier (warning) about other assays.
    o plotPCA() prints out the `ngenes` setting.
    o Added pcsToUse for plotPCA (idea from Vince Carey)
    o Added test that SE exist for lfcShrink (in case of
      glmGamPoi fitType).

CHANGES IN VERSION 1.41.13
--------------------------

    o collapseReplicates() now noisier (warning) about other assays.
    o plotPCA() prints out the `ngenes` setting.

CHANGES IN VERSION 1.41.8
-------------------------

    o Use of MatrixGenerics

CHANGES IN VERSION 1.41.4
-------------------------

    o Fixed dispersionFunction argument issue.

CHANGES IN VERSION 1.41.2
-------------------------

    o Added pcsToUse for plotPCA (idea from Vince Carey)

CHANGES IN VERSION 1.41.1
-------------------------

    o Added test that SE exist for lfcShrink (in case of
      glmGamPoi fitType).

CHANGES IN VERSION 1.39.8
-------------------------

    o Changed `lower=0` to `lower=1e-6` in unmix(), as the
      lower bound of 0 was producing sqrt(negative) errors
      on Linux ARM64.

      https://support.bioconductor.org/p/9150056/

CHANGES IN VERSION 1.39.7
-------------------------

    o Fix bug in independent filtering: with very little variation in
      the curve of number of rejections over threshold, and when the
      maximum was only reached near the end, the default filtering
      wouldn't attain sufficient filtering. This has been addressed
      by also checking for a threshold at which 90%, or 80% of the
      fitted number of rejections is found.