@@ -1,4 +1,5 @@
 CHANGES IN VERSION 1.44.0
+-------------------------
 
     o New method for 'greaterAbs' in results() which has more
       power than the original 2014-2023 method. The old method
@@ -8,6 +9,11 @@ CHANGES IN VERSION 1.44.0
     o Fix from I-Hsuan Lin for the glmGamPoi dispersion estimation
       where the wrong indexing of the fitted mean matrix was used,
       which caused a slowdown.
+
+    o Fix from Rasmus Henningsson where the Cook's distances for
+      the LRT were computed using a rough estimate of the mean,
+      rather than the one from the GLM estimates of the full model.
+      Now Cook's distances for Wald and LRT should be consistent.
 
 CHANGES IN VERSION 1.42.0
 -------------------------
